--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-dom": "18.2.7",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
+    "firebase": "^10.4.0",
     "framer-motion": "^10.16.4",
     "lint-staged": "^14.0.1",
     "next": "13.4.19",
