--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint-config-next": "13.4.19",
     "firebase": "^10.4.0",
     "framer-motion": "^10.16.4",
+    "jotai": "^2.4.2",
     "lint-staged": "^14.0.1",
     "next": "13.4.19",
     "react": "18.2.0",
