--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "framer-motion": "^10.16.4",
     "jotai": "^2.4.2",
     "lint-staged": "^14.0.1",
+    "nanoid": "^5.0.1",
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
